# system_controller

./: Cargo.toml  build.sh
src/: config.toml  definitions.rs  error.rs  main.rs  pin_map.rs  traits.rs
src/command/: commands.rs  dispatch.rs  listen.rs  mod.rs  serde.rs
src/config/: mod.rs  telemetry.rs
src/config/hardware/: ballast.rs  debug.rs  dht11.rs  light.rs  mod.rs  propulsion.rs  temperature.rs
src/hardware_model/: dht11.rs  light.rs  mod.rs
src/hardware_model/ballast/: mod.rs
src/hardware_model/propulsion/: aft_thrust.rs  mod.rs  thruster.rs  thruster_controller.rs  yaw_thrust.rs
src/metrics/: mod.rs  system.rs
src/movement/: mod.rs
src/movement/propulsion/: mod.rs  thruster.rs
src/telemetry/: ballast.rs  environment.rs  mod.rs  propulsion.rs  system.rs
