[package]
name = "system_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
embedded-hal = "0.2.7"
once_cell = "1.18.0"
rppal = { version = "0.14.1", features = ["hal"] }
serde = {version = "1.0.188", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
toml = "0.8.0"
